<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_orbot"
        android:key="NETWORK_USE_TOR_KEY"
        android:title="@string/pref_use_tor_label"
        android:summary="@string/pref_use_tor_message"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="NETWORK_USE_VPN_KEY"
        android:title="@string/pref_use_vpn_label"
        android:summary="@string/pref_use_vpn_summary"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="NETWORK_USE_MIRROR_KEY"
        android:title="@string/pref_use_mirror_label"
        android:summary="@string/pref_use_mirror_summary"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="USE_CRASHLYTICS"
        android:title="@string/pref_use_crashlytics_label"
        android:summary="@string/pref_use_crashlytics_summary"/>
</PreferenceScreen>
