<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/network_dialog_title"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                fontPath="fonts/Furore.ttf"/>

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/network_dialog_message"
                android:textAppearance="@style/DialogText" />
        </LinearLayout>
    </ScrollView>

    <RadioGroup
        android:id="@+id/radio_tor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:checkedButton="@+id/radio_use_Tor"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="middle">

        <RadioButton
            android:id="@+id/radio_use_Tor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/network_dialog_radio_orbot"
            android:textSize="18sp"
            app:buttonTint="@color/green" />

        <RadioButton
            android:id="@+id/radio_use_Bitmask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/network_dialog_radio_bitmask"
            android:textSize="18sp"
            app:buttonTint="@color/green" />

        <RadioButton
            android:id="@+id/radio_not_use_Tor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/network_dialog_radio_cancel"
            android:textSize="18sp"
            app:buttonTint="@color/red"
            tools:text="@string/network_dialog_radio_cancel" />
    </RadioGroup>
</LinearLayout>