<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_donate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.news.revbel.donate.DonateFragment"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/support_organisation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate_organiztion_1"
            android:textIsSelectable="true"
            android:textAppearance="@style/DialogText" />

        <Button
            android:id="@+id/donate"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/donate_ads"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/support_organization2"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="@string/donate_organiztion_2"
            android:textAppearance="@style/DialogText" />

    </LinearLayout>


</ScrollView>